--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,7 +11,7 @@
     <!-- About -->
         <!-- Name, Title, Links (LinkedIn and GitHub), Pic -->
     <div class="about">
-        <h2>Richrad Rosenberg</h2>
+        <h2>Richard Rosenberg</h2>
         <h3>Full-Stack Software Engineer</h3>
     </div>
     <div class="links">
