--- a/views/home.ejs
+++ b/views/home.ejs
@@ -8,46 +8,70 @@
     <title>Richard Rosenberg</title>
 </head>
 <body>
-    <!-- About -->
-        <!-- Name, Title, Links (LinkedIn and GitHub), Pic -->
-    <div class="about">
+    <!-- Intro -->
+    <!-- TODO Show off some personality -->
+    <div class="intro">
         <h2>Richard Rosenberg</h2>
-        <h3>Full-Stack Software Engineer</h3>
+        <h3>Software Engineer</h3>
     </div>
-    <div class="links">
+    <!-- About Me -->
+    <div class="about">
+            <h3>About Me</h3>
+            <h5>Ex-Bartender Turned Dev</h5>
+            <p class="about__info">
+            Here we can include a short write-up about ourselves, our past & our future goals. It may also be good to include your tech stack so that anyone reading can have a rough overview of what skills you have (and don’t have).
+            </p>
+        <div class="about__stacks">
+            <h5>Tech Stacks</h5>
+            <ul>
+                <li>tech 1</li>
+                <li>tech 2</li>
+                <li>tech 3</li>
+            </ul>
+        </div>
+    </div>
+    <!-- Projects -->
+    <div class="project">
+        <h3>Projects</h3>
+    <!-- Noods -->
+        <div class="project__noods">
+            <h4>Noods</h4>
+            <p>Noods Description - Plans for Noods</p>
+            <a href="https://git.generalassemb.ly/rosenbr73/capstone">Link for Noods Repo</a>
+            <a href="http://yournoods.herokuapp.com/">Link to app</a>
+        </div>
+    <!-- Pachigatchi? -->
+        <div class="project__pachigatchi">
+            <h4>Pachi-gatchi</h4>
+            <p>Pachi-Gatchi Description - Plans for Pachi</p>
+            <a href="https://github.com/rosenbr/pachy-gotchi">Link to Repo</a>
+            <a href="">Link to app</a>
+        </div>
+    <!-- Wayfarer -->
+        <div class="project__wayfarer">
+            <h4>Wayfarer</h4>
+            <p>Wayfarer Description - Plans for Wayfarer</p>
+            <a href="https://git.generalassemb.ly/joshdaos/Project_2">Link for Wayfarer Repo</a>
+            <a href="https://project2-wayfarer.herokuapp.com/">Link to app</a>
+        </div>
+    <!-- Chefly? -->
+        <div class="project__chefly">
+            <h4>Chefly</h4>
+            <p>Chefly Description - Plans for Chefly</p>
+            <a href="https://git.generalassemb.ly/robinweitz/Chefly-Project1">Link for Chefly Repo</a>
+        </div>
+    </div>
+    <!-- Contact Info/Call-To-Action -->
+    <div class="contact">
+        <h3>Contact Me!</h3>
+        <form action="">Email</form>
+        <form action="">Message</form>
         <a href="linkedin.com/in/richardrosenberg88">LinkedIn
             <i>Placeholder</i>
         </a>
-        <a href="git.generalassemb.ly/rosenbr73">GitHub
+        <a href="https://github.com/rosenbr">GitHub
             <i>Placeholder</i>
         </a>
-    </div>
-    <!-- Noods -->
-    <div class="project__noods">
-        <h4>Noods</h4>
-        <p>Noods Description - Plans for Noods</p>
-        <a href="">Link for Noods Repo</a>
-        <a href="">Link to app</a>
-    </div>
-    <!-- Wayfarer -->
-    <div class="project__wayfarer">
-        <h4>Wayfarer</h4>
-        <p>Wayfarer Description - Plans for Wayfarer</p>
-        <a href="">Link for Wayfarer Repo</a>
-        <a href="">Link to app</a>
-    </div>
-    <!-- Pachigatchi? -->
-    <div class="project__pachigatchi">
-        <h4>Pachi-gatchi</h4>
-        <p>Pachi-Gatchi Description - Plans for Pachi</p>
-        <a href="">Link to Repo</a>
-        <a href="">Link to app</a>
-    </div>
-    <!-- Chefly? -->
-    <div class="project__chefly">
-        <h4>Chefly</h4>
-        <p>Chefly Description - Plans for Chefly</p>
-        <a href="">Link for Chefly Repo</a>
     </div>
 </body>
 </html>
