--- a/views/home.ejs
+++ b/views/home.ejs
@@ -19,7 +19,7 @@
             <h3>About Me</h3>
             <h5>Ex-Bartender Turned Dev</h5>
             <p class="about__info">
-            Here we can include a short write-up about ourselves, our past & our future goals. It may also be good to include your tech stack so that anyone reading can have a rough overview of what skills you have (and don’t have).
+            Hello! My name is Richard and I am an aspiring Software Engineer.</br></br> Something about 10+ yrs in the restaurant industy, not owning a working laptop/desktop for that time, being tech illiterate to now being able to build and deploy full-stack apps (and an actual PC).</br></br> Growth mindset/adaptability.</br></br> Stuff about GA.
             </p>
         <div class="about__stacks">
             <h5>Tech Stacks</h5>
