--- a/views/home.ejs
+++ b/views/home.ejs
@@ -10,70 +10,76 @@
 <body>
     <!-- Intro -->
     <!-- TODO Show off some personality -->
-    <div class="intro">
-        <h2>Richard Rosenberg</h2>
-        <h3>Software Engineer</h3>
-    </div>
+    <section class="info">
+        <div class="intro">
+            <h2>Richard Rosenberg</h2>
+            <h3>Software Engineer</h3>
+        </div>
     <!-- About Me -->
-    <div class="about">
-            <h3>About Me</h3>
-            <h5>Ex-Bartender Turned Dev</h5>
-            <p class="about__info">
-            Hello! My name is Richard and I am an aspiring Software Engineer.</br></br>Something about 10+ yrs in the restaurant industy, not owning a working laptop/desktop for that time, being tech illiterate to now being able to build and deploy full-stack apps (and an actual PC).</br></br>Growth mindset/adaptability.</br></br>Stuff about GA.
-            </p>
-        <div class="about__stacks">
-            <h5>Tech Stacks</h5>
-            <ul>
-                <li>tech 1</li>
-                <li>tech 2</li>
-                <li>tech 3</li>
-            </ul>
+        <div class="about">
+                <h3>About Me</h3>
+                <h5>Ex-Bartender Turned Dev</h5>
+                <p class="about__info">
+                Hello! My name is Richard and I am an aspiring Software Engineer.</br></br>Something about 10+ yrs in the restaurant industy, not owning a working laptop/desktop for that time, being tech illiterate to now being able to build and deploy full-stack apps (and an actual PC).</br></br>Growth mindset/adaptability.</br></br>Stuff about GA.
+                </p>
+            <div class="about__stacks">
+                <h5>Tech Stacks</h5>
+                <ul>
+                    <li>tech 1</li>
+                    <li>tech 2</li>
+                    <li>tech 3</li>
+                </ul>
+            </div>
         </div>
-    </div>
+    </section>
     <!-- Projects -->
-    <div class="project">
-        <h3>Projects</h3>
+    <section class="projects">
+        <div class="project">
+            <h3>Projects</h3>
     <!-- Noods -->
-        <div class="project__noods">
-            <h4>Noods</h4>
-            <p>Noods allows users to post their own recipes for Instant Noodles as well as comment on other user's recipes. Users can update their profile, posted recipes, and comments. While taking the Software Engineering Immersive through General Assembly, I was eating a lot of Instant Noodles to save money. After a few weeks it got repetitive and boring so I would come up with ways to "spice it up" and wanted to a place for others to be able to do the same!</br></br>Noods is currently still in development with plans for more features to be added in the future. For the time being, you can use the current version <a href="http://yournoods.herokuapp.com/">HERE</a>.</p>
-            <a href="https://git.generalassemb.ly/rosenbr73/capstone">Link for Noods Repo</a>
-        </div>
+            <div class="project__noods">
+                <h4>Noods</h4>
+                <img src="/images/Noods_Screenshot.png" alt="Noods Screenshot">
+                <p>Noods allows users to post their own recipes for Instant Noodles as well as comment on other user's recipes. Users can update their profile, posted recipes, and comments. While taking the Software Engineering Immersive through General Assembly, I was eating a lot of Instant Noodles to save money. After a few weeks it got repetitive and boring so I would come up with ways to "spice it up" and wanted to a place for others to be able to do the same!</br></br>Noods is currently still in development with plans for more features to be added in the future. For the time being, you can use the current version <a href="http://yournoods.herokuapp.com/">HERE</a>.</p>
+                <a href="https://git.generalassemb.ly/rosenbr73/capstone">Link for Noods Repo</a>
+            </div>
     <!-- Pachigatchi? -->
-        <div class="project__pachigatchi">
-            <h4>Pachy-gotchi</h4>
-            <p>Pachy-gotchi is a twist on the classic Tomagotchi toy. This was my first time creating an app that had any kind of functionality. It is very basic and visually not the most appealing, but a few weeks before creating it I could barely write a "for loop." It will always hold a special place in my heart as my first real creation! The inspiration for using a pachycephalosaurus came from the feeling of banging my head against a wall while learning the basics of JavaScript.</br></br>This app has been released with no plans of further updates. You can play the latest version <a href="">HERE</a>.</p>
-            <a href="https://github.com/rosenbr/pachy-gotchi">Link to Repo</a>
-            
-        </div>
+            <div class="project__pachigatchi">
+                <h4>Pachy-gotchi</h4>
+                <p>Pachy-gotchi is a twist on the classic Tomagotchi toy. This was my first time creating an app that had any kind of functionality. It is very basic and visually not the most appealing, but a few weeks before creating it I could barely write a "for loop." It will always hold a special place in my heart as my first real creation! The inspiration for using a pachycephalosaurus came from the feeling of banging my head against a wall while learning the basics of JavaScript.</br></br>This app has been released with no plans of further updates. You can play the latest version <a href="">HERE</a>.</p>
+                <a href="https://github.com/rosenbr/pachy-gotchi">Link to Repo</a>
+            </div>
     <!-- Wayfarer -->
-        <div class="project__wayfarer">
-            <h4>Wayfarer</h4>
-            <p>Wayfarer is an app for users to create posts about cities they have visited, specifically for some summer time fun. The focus of this project was two fold. First to work with and meet client expectations. Secondly, to work in a team and divide tasks and collaborate with my team members (<a href="">Keith (Ohz) Baskerville</a>, <a href="">Joshua Daos</a>, and <a href="">Kimo Kendrick</a>). This project was divided into Sprints that we had to meet the requirements of before being approved to move onto the next one.</br></br>This app has been deployed with no plans for future updates. You can check out the latest version <a href="https://project2-wayfarer.herokuapp.com/">HERE</a>.</p>
-            <a href="https://git.generalassemb.ly/joshdaos/Project_2">Link for Wayfarer Repo</a>
+            <div class="project__wayfarer">
+                <h4>Wayfarer</h4>
+                <p>Wayfarer is an app for users to create posts about cities they have visited, specifically for some summer time fun. The focus of this project was two fold. First to work with and meet client expectations. Secondly, to work in a team and divide tasks and collaborate with my team members (<a href="">Keith (Ohz) Baskerville</a>, <a href="">Joshua Daos</a>, and <a href="">Kimo Kendrick</a>). This project was divided into Sprints that we had to meet the requirements of before being approved to move onto the next one.</br></br>This app has been deployed with no plans for future updates. You can check out the latest version <a href="https://project2-wayfarer.herokuapp.com/">HERE</a>.</p>
+                <a href="https://git.generalassemb.ly/joshdaos/Project_2">Link for Wayfarer Repo</a>
             <!-- TODO add links -> (<a href="https://www.linkedin.com/in/keithlbaskervillejr/">Keith (Ohz) Baskerville</a>, <a href="https://www.linkedin.com/in/joshua-daos/">Joshua Daos</a>, and <a href="https://www.linkedin.com/in/kimo-kendrick/">Kimo Kendrick</a>) -->
-        </div>
+            </div>
     <!-- Chefly? -->
-        <div class="project__chefly">
-            <h4>Chefly</h4>
-            <p>Chefly is a recipe blog site built by <a href="">Robin Weitzman</a> and myself. The goal of the project was to reverse-engineer full CRUD functionality from an already existing website. We chose <a href="https://www.yummly.com/">Yummly</a> because we both come from food service backgrounds. This was also the first time working with some within the same repo and different branches on a project. I had a lot of fun with this and Robin was a blast to work with!</br></br>This app has not been released and we do not have plans on future updates. You can check out the repo <a href="https://git.generalassemb.ly/robinweitz/Chefly-Project1">HERE</a>.</p>
-        </div>
+            <div class="project__chefly">
+                <h4>Chefly</h4>
+                <p>Chefly is a recipe blog site built by <a href="">Robin Weitzman</a> and myself. The goal of the project was to reverse-engineer full CRUD functionality from an already existing website. We chose <a href="https://www.yummly.com/">Yummly</a> because we both come from food service backgrounds. This was also the first time working with some within the same repo and different branches on a project. I had a lot of fun with this and Robin was a blast to work with!</br></br>This app has not been released and we do not have plans on future updates. You can check out the repo <a href="https://git.generalassemb.ly/robinweitz/Chefly-Project1">HERE</a>.</p>
+            </div>
         <!-- <a href="https://www.linkedin.com/in/robinweitzman1/">Robin Weitzman</a> -->
-    </div>
+        </div>
+    </section>
     <!-- Contact Info/Call-To-Action -->
     <div class="contact">
         <h3>Contact Me!</h3>
-        <form action="https://formspree.io/f/xvodwowk" method="POST">
-        <label>
-          Your email:
-          <input type="email" name="_replyto">
-        </label>
-        <label>
-          Your message:
-          <textarea name="message"></textarea>
-        </label> 
-        <button type="submit">Send</button>
-      </form>
+        <div class="contact__email">
+            <form action="https://formspree.io/f/xvodwowk" method="POST">
+                <label>
+                    Your email:
+                    <input type="email" name="_replyto">
+                </label>
+                <label>
+                    Your message:
+                    <textarea name="message"></textarea>
+                </label> 
+                <button type="submit">Send</button>
+            </form>
+        </div>
     </div>
 </body>
 </html>
