Images loading, finally

--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -17,7 +17,7 @@
     #FFC947
     #FEDDBE
 */
-body {
+/* body {
     display: flex;
 }
 
@@ -29,4 +29,4 @@ body {
 .projects {
     display: flex;
     flex-direction: column;
-}
+} */
