--- a/views/home.ejs
+++ b/views/home.ejs
@@ -20,14 +20,23 @@
                 <h3>About Me</h3>
                 <h5>Ex-Bartender Turned Dev</h5>
                 <p class="about__info">
-                Hello! My name is Richard and I am an aspiring Software Engineer.</br></br>Something about 10+ yrs in the restaurant industy, not owning a working laptop/desktop for that time, being tech illiterate to now being able to build and deploy full-stack apps (and an actual PC).</br></br>Growth mindset/adaptability.</br></br>Stuff about GA.
+                Hello! My name is Richard and I am an aspiring Software Engineer.</br></br>After working in the restaurant industry for over 10 years, I decided it was time for a change. I took the plunge into the world of tech head first by joining General Assembly and starting the Software Engineering Immersive. After 12 long weeks of sleepless nights, insane stress, and thoughts of quiting and returning to bartending, I made it through! It was by far one of the most challenge experiences of my life, that was only made more difficult as I had no background in any tech aside from using Point Of Sale terminals while bartending. I didn't even have a working laptop/desktop for those 10 years!</br></br>Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.
                 </p>
             <div class="about__stacks">
                 <h5>Tech Stacks</h5>
-                <ul>
-                    <li>tech 1</li>
-                    <li>tech 2</li>
-                    <li>tech 3</li>
+                <ul class="about__list">
+                    <li class="list__first_half">JavaScript</li>
+                    <li class="list__first_half">Python</li>
+                    <li class="list__first_half">React</li>
+                    <li class="list__first_half">JQuery</li>
+                    <li class="list__first_half">Mongoose</li>
+                    <li class="list__first_half">Node</li>
+                    <li class="list__second_half">HTML</li>
+                    <li class="list__second_half">CSS</li>
+                    <li class="list__second_half">Django</li>
+                    <li class="list__second_half">Express</li>
+                    <li class="list__second_half">Postgres</li>
+                    <li class="list__second_half">GitHub</li>
                 </ul>
             </div>
         </div>
@@ -39,21 +48,21 @@
     <!-- Noods -->
             <div class="project__noods">
                 <h4>Noods</h4>
-                <img class="project__image" src="public/images/Noods_Screenshot.jpg" alt="Noods Screenshot">
+                <img class="project__image" src="/images/Noods_Screenshot.jpg" alt="Noods Screenshot">
                 <p>Noods allows users to post their own recipes for Instant Noodles as well as comment on other user's recipes. Users can update their profile, posted recipes, and comments. While taking the Software Engineering Immersive through General Assembly, I was eating a lot of Instant Noodles to save money. After a few weeks it got repetitive and boring so I would come up with ways to "spice it up" and wanted to a place for others to be able to do the same!</br></br>Noods is currently still in development with plans for more features to be added in the future. For the time being, you can use the current version <a href="http://yournoods.herokuapp.com/">HERE</a>.</p>
                 <a href="https://git.generalassemb.ly/rosenbr73/capstone">Link for Noods Repo</a>
             </div>
     <!-- Pachigatchi -->
             <div class="project__pachigatchi">
                 <h4>Pachy-gotchi</h4>
-                <img src="https://picsum.photos/200" alt="Pachy-Gotchi Screenshot" class="project__image" />
+                <img src="/images/Pachy_Screenshot.png" alt="Pachy-Gotchi Screenshot" class="project__image" />
                 <p>Pachy-gotchi is a twist on the classic Tomagotchi toy. This was my first time creating an app that had any kind of functionality. It is very basic and visually not the most appealing, but a few weeks before creating it I could barely write a "for loop." It will always hold a special place in my heart as my first real creation! The inspiration for using a pachycephalosaurus came from the feeling of banging my head against a wall while learning the basics of JavaScript.</br></br>This app has been released with no plans of further updates. You can play the latest version <a href="">HERE</a>.</p>
                 <a href="https://github.com/rosenbr/pachy-gotchi">Link to Repo</a>
             </div>
     <!-- Wayfarer -->
             <div class="project__wayfarer">
                 <h4>Wayfarer</h4>
-                <img src="https://picsum.photos/200" alt="Wayfarer Screenshot" class="project__image">
+                <img src="/images/Wayfarer_Screenshot.png" alt="Wayfarer Screenshot" class="project__image">
                 <p>Wayfarer is an app for users to create posts about cities they have visited, specifically for some summer time fun. The focus of this project was two fold. First to work with and meet client expectations. Secondly, to work in a team and divide tasks and collaborate with my team members (<a href="">Keith (Ohz) Baskerville</a>, <a href="https://www.linkedin.com/in/joshua-daos/">Joshua Daos</a>, and <a href="">Kimo Kendrick</a>). This project was divided into Sprints that we had to meet the requirements of before being approved to move onto the next one.</br></br>This app has been deployed with no plans for future updates. You can check out the latest version <a href="https://project2-wayfarer.herokuapp.com/">HERE</a>.</p>
                 <a href="https://git.generalassemb.ly/joshdaos/Project_2">Link for Wayfarer Repo</a>
             <!-- TODO add links -> (<a href="https://www.linkedin.com/in/keithlbaskervillejr/">Keith (Ohz) Baskerville</a>, <a href="https://www.linkedin.com/in/joshua-daos/">Joshua Daos</a>, and <a href="https://www.linkedin.com/in/kimo-kendrick/">Kimo Kendrick</a>) -->
