--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -29,6 +29,11 @@ img {
     width: 400px;
 }
 
+i {
+    color: #EFEFEF;
+    background-color: #EFEFEF;
+}
+
 /* === | Info/About | === */
 .info {
     display: flex;
