--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type ="text/css" href="/styles/main.css" >
+    <link href="/styles/all.css" rel="stylesheet">
+    <script defer src="/scripts/all.js"></script>
     <title>Richard Rosenberg</title>
 </head>
 <body>
@@ -14,6 +16,12 @@
         <div class="info__intro">
             <h2>Richard Rosenberg</h2>
             <h3>Software Engineer</h3>
+            <a href="https://www.linkedin.com/in/richardrosenberg88/">
+                <i class="fab fa-linkedin fa-5x"></i>
+            </a>
+            <a href="https://git.generalassemb.ly/rosenbr73">
+                <i class="fab fa-github-square fa-5x"></i>
+            </a>
         </div>
     <!-- About Me -->
         <div class="info__about">
@@ -50,7 +58,9 @@
                 <img class="project__image" src="/images/Noods_Screenshot.jpg" alt="Noods Screenshot">
                 <div class="project__info">
                     <h4 class="project__header">Noods</h4>
-                    <a class="project__repo" href="https://git.generalassemb.ly/rosenbr73/capstone">Link for Noods Repo</a>
+                    <a class="project__repo" href="https://git.generalassemb.ly/rosenbr73/capstone">
+                        <i class="fab fa-github-square fa-5x"></i>
+                    </a>
                     <p class="project__description">Noods allows users to post their own recipes for Instant Noodles as well as comment on other user's recipes. Users can update their profile, posted recipes, and comments. While taking the Software Engineering Immersive through General Assembly, I was eating a lot of Instant Noodles to save money. After a few weeks it got repetitive and boring so I would come up with ways to "spice it up" and wanted to a place for others to be able to do the same!</br></br>Noods is currently still in development with plans for more features to be added in the future. For the time being, you can use the current version <a class="project__link" href="http://yournoods.herokuapp.com/">HERE</a>.</p>
                 </div>
                 <!-- <i class="fab fa-github"></i> -->
@@ -59,7 +69,9 @@
             <div class="project__pachygatchi">
                 <div class="project__info">
                     <h4 class="project__header">Pachy-gotchi</h4>
-                    <a class="project__repo" href="https://github.com/rosenbr/pachy-gotchi">Link to Pachy Repo</a>
+                    <a class="project__repo" href="https://github.com/rosenbr/pachy-gotchi">
+                        <i class="fab fa-github-square fa-5x"></i>
+                    </a>
                     <p class="project__description">Pachy-gotchi is a twist on the classic Tomagotchi toy. This was my first time creating an app that had any kind of functionality. It is very basic and visually not the most appealing, but a few weeks before creating it I could barely write a "for loop." It will always hold a special place in my heart as my first real creation! The inspiration for using a pachycephalosaurus came from the feeling of banging my head against a wall while learning the basics of JavaScript.</br></br>This app has been released with no plans of further updates. You can play the latest version <a class="project__link" id="pachy__link" href="">HERE</a>.</p>
                 </div>
                 <img src="/images/Pachy_Screenshot.png" alt="Pachy-Gotchi Screenshot" class="project__image" />
@@ -69,7 +81,9 @@
                 <img src="/images/Wayfarer_Screenshot.png" alt="Wayfarer Screenshot" class="project__image">
                 <div class="project__info">
                     <h4 class="project__header">Wayfarer</h4>
-                    <a class="project__repo" href="https://git.generalassemb.ly/joshdaos/Project_2">Link for Wayfarer Repo</a>
+                    <a class="project__repo" href="https://git.generalassemb.ly/joshdaos/Project_2">
+                        <i class="fab fa-github-square fa-5x"></i>
+                    </a>
                     <p class="project__description">Wayfarer is an app for users to create posts about cities they have visited, specifically for some summer time fun. The focus of this project was two fold. First to work with and meet client expectations. Secondly, to work in a team and divide tasks and collaborate with my team members (<a class="project__link" href="https://www.linkedin.com/in/keithlbaskervillejr/">Keith (Ohz) Baskerville</a>, <a class="project__link" href="https://www.linkedin.com/in/joshua-daos/">Joshua Daos</a>, and <a class="project__link" href="https://www.linkedin.com/in/kimo-kendrick/">Kimo Kendrick</a>). This project was divided into Sprints that we had to meet the requirements of before being approved to move onto the next one.</br></br>This app has been deployed with no plans for future updates. You can check out the latest version <a class="project__link" href="https://project2-wayfarer.herokuapp.com/">HERE</a>.</p>
                 </div>
             </div>
