--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -7,6 +7,7 @@ TODO
 - Spell check API for contact message?
 - invalid entry on contact error handling?
 - anything else?
+- NOTE REMOVE BOARDERS WHEN DONE!!!!!
 */
 
 
