--- a/views/home.ejs
+++ b/views/home.ejs
@@ -25,8 +25,8 @@
     <!-- About Me -->
         <div class="info__about">
                 <h3>About Me</h3>
-                <h5>| Ex-Bartender Turned Dev |</h5>
-                <p class="about__info">Hello! My name is Richard and I am an aspiring Software Engineer.</p>
+                <!-- <h5>| Ex-Bartender Turned Dev |</h5> -->
+                <!-- <p class="about__info">Hello! My name is Richard and I am an aspiring Software Engineer.</p> -->
                 <p class="about__infoP2">After working in the restaurant industry for over 10 years, I decided it was time for a change. I took the plunge into the world of tech head first by joining General Assembly and starting the Software Engineering Immersive. After 12 long weeks of sleepless nights, insane stress, and thoughts of quiting and returning to bartending, I made it through! It was by far one of the most challenge experiences of my life, that was only made more difficult as I had no background in any tech aside from using Point Of Sale terminals while bartending. I didn't even have a working laptop/desktop for those 10 years!</p>
                 <p class="info__aboutP3">Being able to adapt to new experiences and situations was immensely helpful on my journey to not only becoming a dev, but on the journey of life as well. When the pandemic hit, I took it as an opportunity to learn something new and adapt to the changing world.</p>
             <!-- <div class="about__stacks">
