--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -56,7 +56,7 @@ p {
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content: center;
+    justify-content: flex-start;
 }
 
 .info__header {
